--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>xapp</title><script>(function (doc, win) {
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"><title>xapp</title><script>(function (doc, win) {
         var docEl = doc.documentElement,
             resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
             recalc = function () {
@@ -10,4 +10,4 @@
         if (!doc.addEventListener) return;
         win.addEventListener(resizeEvt, recalc, false);
         doc.addEventListener('DOMContentLoaded', recalc, false);
-    })(document, window);</script><link href=https://a415432669.github.io/xaShow/static/css/app.31519d381285eb99a73ac12c830d7812.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=https://a415432669.github.io/xaShow/static/js/manifest.4efe12f25001e1260bc7.js></script><script type=text/javascript src=https://a415432669.github.io/xaShow/static/js/vendor.93db6274bfcc0a41690e.js></script><script type=text/javascript src=https://a415432669.github.io/xaShow/static/js/app.6b2a84d484bd3d2f57d8.js></script></body></html>
+    })(document, window);</script><link href=https://a415432669.github.io/xaShow/static/css/app.ffef24df37b993eea387bee03028f41f.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=https://a415432669.github.io/xaShow/static/js/manifest.4efe12f25001e1260bc7.js></script><script type=text/javascript src=https://a415432669.github.io/xaShow/static/js/vendor.b8ae717615c8e71aaee4.js></script><script type=text/javascript src=https://a415432669.github.io/xaShow/static/js/app.8505aad9863d375bff26.js></script></body></html>
